--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                     <li class="nav__item">
                         <a href="/" class="nav__link">Home</a>
                     </li>
-                    <li class="nav__item">
+<!--                     <li class="nav__item">
                         <a href="#about" class="nav__link">About</a>
-                    </li>
+                    </li> -->
                     <li class="nav__item">
                         <a href="#blog" class="nav__link">Blog</a>
                     </li>
@@ -49,7 +49,7 @@
                 <span class="home__subtitle">Termurah Se - Bumiayu!</span>
                 <h1 class="home__title">CCTV</h1>
                 <p class="home__description">
-                    Cuman 2 jutaan rumah terpantau dari 4 penjuru.
+                    Cuma 2 juta-an, rumah terpantau dari 4 penjuru.
                 </p>
                 <a href="https://wa.me/6281294382447" class="home__button">
                     Pasang Sekarang!
