--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <section class="about" id="about">
         <div class="about__container contain">
             <span class="about__title">About</span>
-            <p class="about__desc">Truna Jaya Mandiri merupakan ...</p>
+            <p class="about__desc">Ini cuman hasil tugas</p>
         </div>
     </section>
     <script src="assets/js/main.js"></script>
